--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,6 +15,6 @@ tracing-subscriber = { version = "0.3", features = ["env-filter"] }
 anyhow = "1.0"
 uuid = {version = "1.3", features = ["v4", "fast-rng", "macro-diagnostics"]}
 lazy_static = "1.4"
-diesel =  { version = "2.0",  features = ["postgres"] }
-diesel-async = { version = "0.2",  features = ["postgres"] }
+diesel =  { version = "2.0",  features = ["postgres", "r2d2"] }
+diesel-async = { version = "0.2",  features = ["postgres", "bb8"] }
 dotenvy = "0.15"
